feat(case): add case-document relationship and fix repository compilation
- Add case_id field to Document entity and repo_document table
- Add caseId to DocumentSearchDTO for filtering by case
- Add selectByCaseId() to DocumentMapper and XML
- Add getByCaseId() to DocumentService interface and impl
- Create CaseDocumentController: bind/unbind/get documents for a case
- Add repository dependency to case module pom.xml
- Fix Java 8 compat: readAllBytes() -> IOUtils.toByteArray()
- Fix Java 8 compat: URLEncoder.encode(String, Charset) -> encode(String, String)
- Add Lombok annotation processor to parent and repository pom.xml
- Add case_id column and index to repo_document DDL in init.sql